--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Movie App</string>
 
+    <string name="main">Main</string>
     <string name="discover">Discover</string>
     <string name="title_discover">Discover Movies</string>
     <string name="detail">Detail</string>
@@ -23,4 +24,7 @@
     <string name="msg_common_error">Something went wrong!</string>
     <string name="msg_movie_saved">Movie saved into your favorite list</string>
     <string name="msg_movie_deleted">Movie removed from your favorite list</string>
+
+    <string name="title_home">Home</string>
+    <string name="title_account">Account</string>
 </resources>
