--- a/features/main/src/main/res/values/strings.xml
+++ b/features/main/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="label_login">Login</string>
+    <string name="label_logout">Logout</string>
 </resources>
